--- a/build_and_test.yml
+++ b/build_and_test.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ks0n/arch_c_ci:1.0.1
+    strategy:
+      matrix:
+        compiler: ['gcc', 'clang']
 
     steps:
       - uses: actions/checkout@v2
@@ -23,6 +26,8 @@ jobs:
         run: |
           meson build
           ninja -C build
+        env:
+            CC: ${{ matrix.compiler }}
 
   tests:
     runs-on: ubuntu-latest
@@ -38,3 +43,5 @@ jobs:
         run: |
           meson build -Denable_tests=true
           ninja -C build test
+        env:
+            CC: ${{ matrix.compiler }}
